--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
-<div class="container" style="margin-top: 5%;">
+<div class="container" style = "margin-top: 4%;" >
   <div class="col-md-8 col-md-offset-2">
     <div class="row">
-      <%= image_tag @article.poster.url, style: "object-fit:cover" %>
+      <%= image_tag @article.poster.url, style: "object-fit:cover; width:100%; height: 430px;" %>
       <h1><%= @article.title %></h1>
       <p>Published on: <%= @article.created_at.strftime('%d %b %Y')%></p>
     </div>
@@ -17,7 +17,14 @@
         </p>
       </div>
     </div>
+
+    <hr>
+    <div class="row" style="margin-bottom: 25%;">
+      <%= render 'comments/form' %>
+      <%= render 'comments/comment' %>
+    </div>
   </div>
+
 </div>
 <% if user_signed_in? %>
 <div style="position: relative; margin-left: 80%; margin-top: 2%;">
