--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,4 @@
 <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
-  
     <div class="navbar-header">
       <a href="/" class="navbar-brand">
         <%= image_tag "logo.png", style: "display: block;  width : 40px; height : 40px; margin-top: -20%;" %>
@@ -16,8 +15,15 @@
           </a>
         </li>
       </ul>
+      <% if user_signed_in? %>
+        <ul class="nav navbar-nav navbar-right" align="right" style="padding-right: 100px;">
+          <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        </ul>
+      <% end %>
+      <% if !user_signed_in? %>
       <ul class="nav navbar-nav navbar-right" align="right" style="padding-right: 100px;">
-        <li><a href="/users/sign_out">Log Out</a></li>
+        <li><a href="/users/sign_in">Sign In</a></li>
       </ul>
+      <% end %>
     </div>
 </nav>
